<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- MAIN -->
    <string name="version" translatable="false">1.3-BETA</string>
    <string name="appName">Calculator</string>
    <string name="settings">Settings</string>


    <!-- TABS -->
    <string name="firstTab">@string/appName</string>

    <string name="secondTab">Formulas</string>
    <string name="as_formulas">Available soon!</string>

    <string name="thirdTab">Converter</string>
    <string name="as_converter">Available soon!</string>


    <!-- ITEMS -->
    <!-- calculator -->
    <string name="historyItem">History</string>

    <!-- formulas -->
    <string name="mathematicalFormulasItem">Mathematical Formulas</string>
    <string name="areaItem">Area</string>

    <string name="physicalFormulasItem">Physical Formulas</string>
    <string name="velocityItem">Velocity</string>

    <!-- converter -->
    <string name="physicalQuantityItem">Physical Quantity</string>


    <!-- ERRORS -->
    <string name="divideError">Error: Division by 0</string>


    <!-- SETTINGS -->
    <!-- main settings -->
    <string name="settings_general">General</string>
    <string name="summary_general">Unit of measurement, number format, \napplication settings</string>

    <string name="settings_layout">Layout</string>
    <string name="summary_layout">Theme, details, key style, text</string>

    <string name="settings_help">Help</string>
    <string name="summary_help">Feedback, descriptions for the \napplication features</string>

    <string name="settings_about">About</string>
    <string name="summary_about">Update history, application info</string>

    <!-- general settings -->
    <string name="title_unitOfMeasurement">Unit of measurement:</string>
    <string name="unitOfMeasurement_radian">Radian\u0020</string>
    <string name="unitOfMeasurement_degree">Degree\u0020</string>

    <string name="title_numberFormat">Number format:</string>

    <string name="category_applicationSettings">APPLICATION SETTINGS</string>

    <string name="title_language">Language:</string>
    <string name="language_automatically">Automatically\u0020</string>
    <string name="language_english">English\u0020</string>
    <string name="language_german">German (Germany)\u0020</string>

    <string name="title_keyVibration">Key vibration:</string>

    <!-- layout settings -->
    <string name="title_theme">Theme:</string>
    <string name="theme_white">White\u0020</string>
    <string name="theme_gray">Gray\u0020</string>
    <string name="theme_black">Black\u0020</string>

    <string name="title_detailColor">Detail color:</string>
    <string name="detailColor_blue">Blue\u0020</string>
    <string name="detailColor_green">Green\u0020</string>
    <string name="detailColor_red">Red\u0020</string>

    <string name="title_style">Style:</string>
    <string name="style_normal">Normal\u0020</string>
    <string name="style_bold">Bold\u0020</string>
    <string name="style_italic">Italic\u0020</string>

    <string name="category_size_and_style">SIZE AND STYLE</string>
    <string name="title_font">Font:</string>

    <string name="settings_fontAndIconSize">Font \u0026 icon size</string>
    <string name="summary_fontAndIconSize">Change the size of the text and icons</string>

    <!-- font size settings -->
    <string name="title_fontSize">Font size:</string>
    <string name="title_iconSize">Icon size:</string>

    <string name="size_small">Small</string>
    <string name="size_default">Default</string>
    <string name="size_large">Large</string>
    <string name="size_extra_large">Extra large</string>

    <string name="betPreview" translatable="false">(-0,1234567895%)</string>
    <string name="setPreview" translatable="false">0,123 + 456 - 789 × 123 ÷ 456 mod (-0,0789) +</string>
    <string name="mtvPreview" translatable="false">Memory: 0,123456789</string>

    <string name="title_calculator_preview">Calculator [Preview]</string>
    <string name="title_formulas_preview">Formulas [Preview]</string>
    <string name="title_converter_preview">Converter [Preview]</string>
    <string name="title_settings_preview">Settings [Preview]</string>


    <!-- else -->
    <string name="cancel">Cancel</string>


    <!-- UPDATE MESSAGE -->
    <string name="newFeatures"><b>Version: </b>1.3-BETA \n\n<b><u>New features:</u></b> \n- update message is only displayed once \n\n<b><u>1.2-BETA</u></b> \n- the content of the text fields is retained \n\n<b><u>1.1-BETA</u></b> \n- update message \n- percents also work with a sign</string>
    <string name="availableSoon">Available soon!</string>
</resources>