<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/generalPrefsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/bgColor"
    tools:context=".activities.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:titleTextAppearance="@style/LargeTitleTextAppearance"/>

    <RelativeLayout
        android:id="@+id/settings_general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@android:id/icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_centerVertical="true"
            android:tint="?attr/settingsIconTint"
            android:src="@drawable/i_general"/>

        <LinearLayout
            android:id="@android:id/widget_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@android:id/icon"
            android:layout_toEndOf="@android:id/icon"
            android:orientation="vertical">

            <TextView
                android:id="@+id/general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="?attr/settingsTextColor"
                android:textSize="18sp"
                android:text="@string/settings_general"/>

            <TextView
                android:id="@+id/generalSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="?attr/settingsTextColor"
                android:textSize="15sp"
                android:text="@string/summary_general"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@android:id/icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_centerVertical="true"
            android:tint="?attr/settingsIconTint"
            android:src="@drawable/i_layout"/>

        <LinearLayout
            android:id="@android:id/widget_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@android:id/icon"
            android:layout_toEndOf="@android:id/icon"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="?attr/settingsTextColor"
                android:textSize="18sp"
                android:text="@string/settings_layout"/>

            <TextView
                android:id="@+id/layoutSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="?attr/settingsTextColor"
                android:textSize="15sp"
                android:text="@string/summary_layout"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@android:id/icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_centerVertical="true"
            android:tint="?attr/settingsIconTint"
            android:src="@drawable/i_help"/>

        <LinearLayout
            android:id="@android:id/widget_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@android:id/icon"
            android:layout_toEndOf="@android:id/icon"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="?attr/settingsTextColor"
                android:textSize="18sp"
                android:text="@string/settings_help"/>

            <TextView
                android:id="@+id/helpSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="?attr/settingsTextColor"
                android:textSize="15sp"
                android:text="@string/summary_help"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@android:id/icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_centerVertical="true"
            android:tint="?attr/settingsIconTint"
            android:src="@drawable/i_about"/>

        <LinearLayout
            android:id="@android:id/widget_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@android:id/icon"
            android:layout_toEndOf="@android:id/icon"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="?attr/settingsTextColor"
                android:textSize="18sp"
                android:text="@string/settings_about"/>

            <TextView
                android:id="@+id/aboutSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="?attr/settingsTextColor"
                android:textSize="15sp"
                android:text="@string/summary_about"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>