<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/bgColor"
    tools:context=".activities.settings.GeneralActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:titleTextAppearance="@style/ExtraLargeTitleTextAppearance"/>

    <RelativeLayout
        android:id="@+id/unitOfMeasurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/icon_uom"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_centerVertical="true"
            android:tint="?attr/settingsIconTint"
            android:src="@drawable/i_unit_of_measurement"/>

        <TextView
            android:id="@+id/title_uom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/icon_uom"
            android:layout_toEndOf="@+id/icon_uom"
            android:layout_centerVertical="true"
            android:textStyle="normal"
            android:textColor="?attr/settingsTextColor"
            android:textSize="20sp"
            android:text="@string/title_unitOfMeasurement"/>

        <TextView
            android:id="@+id/summary_uom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textStyle="normal"
            android:textColor="?attr/settingsTextColor"
            android:textSize="17sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/numberFormat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/icon_nf"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_centerVertical="true"
            android:tint="?attr/settingsIconTint"
            android:src="@drawable/i_number_format"/>

        <TextView
            android:id="@+id/title_nf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/icon_nf"
            android:layout_toEndOf="@+id/icon_nf"
            android:layout_centerVertical="true"
            android:textStyle="normal"
            android:textColor="?attr/settingsTextColor"
            android:textSize="20sp"
            android:text="@string/title_numberFormat"/>

        <TextView
            android:id="@+id/summary_nf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textStyle="normal"
            android:textColor="?attr/settingsTextColor"
            android:textSize="17sp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/category_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="?attr/colorPrimary"
        android:textColor="?attr/titleTextColor"
        android:textStyle="italic|bold"
        android:textSize="21sp"
        android:text="@string/category_applicationSettings"/>

    <RelativeLayout
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/icon_l"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_centerVertical="true"
            android:tint="?attr/settingsIconTint"
            android:src="@drawable/i_language"/>

        <TextView
            android:id="@+id/title_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/icon_l"
            android:layout_toEndOf="@+id/icon_l"
            android:layout_centerVertical="true"
            android:textStyle="normal"
            android:textColor="?attr/settingsTextColor"
            android:textSize="20sp"
            android:text="@string/title_language"/>

        <TextView
            android:id="@+id/summary_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textStyle="normal"
            android:textColor="?attr/settingsTextColor"
            android:textSize="17sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/keyVibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/icon_kv"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_centerVertical="true"
            android:tint="?attr/settingsIconTint"
            android:src="@drawable/i_vibration"/>

        <TextView
            android:id="@+id/title_kv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/icon_kv"
            android:layout_toEndOf="@+id/icon_kv"
            android:layout_centerVertical="true"
            android:textStyle="normal"
            android:textColor="?attr/settingsTextColor"
            android:textSize="20sp"
            android:text="@string/title_keyVibration"/>

        <CheckBox
            android:id="@+id/checkbox_kv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:buttonTint="@color/color_check_box"/>

    </RelativeLayout>

</LinearLayout>